--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "Tabitha O'Melay <@tabby__katz>",
   "license": "ISC",
   "dependencies": {
+    "@svgr/webpack": "^5.4.0",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "gray-matter": "^4.0.2",
     "next": "^9.5.5",
+    "next-compose-plugins": "^2.2.0",
     "next-transpile-modules": "^2.3.1",
     "raw-loader": "^4.0.1",
     "react": "^16.14.0",
